# adaptivemm

./: .gitmodules  50-memoptimizer.preset  CONTRIBUTING.md  Makefile  README  README.md  adaptivemm.spec  adaptivemmd.8  adaptivemmd.c  adaptivemmd.cfg  adaptivemmd.service  diff.sh  memoptimizer.8  memoptimizer.c  memoptimizer.cfg  memoptimizer.service  memoptimizer.spec  predict.c  predict.h  predict_impl.h  predictord.c  predictord.gnuplot
.github/: dependabot.yml
.github/actions/code-coverage/: action.yml
.github/actions/setup-adaptived/: action.yml
.github/workflows/: codeql-analysis.yml  continuous-integration.yml  isolated.yml  macaron.yml
adaptived/: .checkpatch.conf  .gitignore  CHANGELOG.txt  CONTRIBUTING.md  Makefile.am  README.md  THIRD_PARTY_LICENSES.txt  autogen.sh  configure.ac  sanity-check.sh
adaptived/doc/: Makefile.am
adaptived/doc/examples/: adjust-weight.json  determine-memorylow.json  flow-chart.odp  jimmy-buffett-config.json  kill-lowpriority.json  lowmemfree-sendsignal.json  topmem-savelogs.json
adaptived/doc/internal/: cgroup_setting_by_psi.md  human-readable.md  list-of-built-in-causes.md  list-of-built-in-effects.md  path-rules.md
adaptived/include/: Makefile.am  adaptived-utils.h  adaptived.h
adaptived/src/: Makefile.am  adaptived-internal.h  adaptivemmd.h  cause.c  cause.h  defines.h  effect.c  effect.h  log.c  main.c  parse.c  pressure.h  rule.c  shared_data.c  shared_data.h
adaptived/src/causes/: Makefile.am  adaptivemmd_causes.c  always.c  cgroup_data.c  cgroup_setting.c  days_of_the_week.c  meminfo.c  memorystat.c  periodic.c  pressure.c  pressure_rate.c  slabinfo.c  time_of_day.c  top.c
adaptived/src/effects/: adaptivemmd_effects.c  cgroup_setting.c  cgroup_setting_by_psi.c  copy_cgroup_setting.c  kill_cgroup.c  kill_cgroup_by_psi.c  kill_processes.c  logger.c  print.c  print_schedstat.c  sd_bus_setting.c  snooze.c  validate.c
adaptived/src/utils/: Makefile.am  adaptivemmd_utils.c  cgroup_utils.c  file_utils.c  float_utils.c  mem_utils.c  path_utils.c  pressure_utils.c  sched_utils.c  sd_bus_utils.c
adaptived/tests/: Makefile.am
adaptived/tests/ftests/: .gitignore  001-cause-time_of_day.json.token  001-cause-time_of_day.py  002-register_cause.c  002-register_cause.json  003-register_plugin_cause.c  003-register_plugin_cause.json  004-register_plugin_effect.c  004-register_plugin_effect.json  007-cause-avg300_pressure_above.c  007-cause-avg300_pressure_above.json  008-cause-pressure_above_total.c  008-cause-pressure_above_total.json  009-cause-pressure_below.c  009-cause-pressure_below.json  010-snooze_effect.c  010-snooze_effect.json  011-cause-pressure_rate_rising.c  011-cause-pressure_rate_rising.json  012-cause-pressure_rate_falling.c  012-cause-pressure_rate_falling.json  013-adaptived-asynchronous_loop.c  013-adaptived-asynchronous_loop.json  014-duplicate_cause_effect.c  015-load_rule_at_runtime.c  016-unload_rule_at_runtime.c  017-register_many.c  018-effect-cgroup_setting_set_str.c  019-effect-cgroup_setting_set_int.c  019-effect-cgroup_setting_set_int.json  020-effect-cgroup_setting_add_int.c  020-effect-cgroup_setting_add_int.json  021-effect-cgroup_setting_sub_int.c  021-effect-cgroup_setting_sub_int.json  022-effect-kill_cgroup.c  022-effect-kill_cgroup.json  023-effect-kill_cgroup_recursive.c  023-effect-kill_cgroup_recursive.json  024-effect-kill_cgroup_by_psi.c  024-effect-kill_cgroup_by_psi.json  (+137 more)
adaptived/tests/gunit/: 001-adaptived_get_pressure.cpp  002-adaptived_get_pressure_avg.cpp  003-adaptived_farray_append.cpp  004-adaptived_farray_linear_regression.cpp  005-cgroup_long_long.cpp  006-cgroup_str.cpp  007-path_walk.cpp  008-cgroup_get_procs.cpp  009-cgroup_detect.cpp  010-adaptived_get_schedstats.cpp  011-kill_processes_sort.cpp  012-shared_data.cpp  Makefile.am  gtest.cpp
adaptivemm/: 50-adaptivemm.preset  README.md  adaptivemm.spec  adaptivemmd.cfg
adaptivemm/src/: adaptivemmd.c  predict.c  predict.h
tools/: diff.sh
